# trex

./: .gitignore  COMMIT_MESSAGE.md  CONTRACT_ERRORS.md  Casper.md  DEBUG_TRACKING.md  DEPLOYMENT.md  LOAD_IN_CHROME.md  QUICK_LOAD_GUIDE.md  README.md  SETUP_COMPLETE.md  TRACKING_FLOW.md  UPDATE_GUIDE.md  notes.md  start.sh
s_backend/: .env.example  README.md  package.json  pnpm-lock.yaml  test-query-nfts.ts
s_backend/src/: index.ts
s_contract/: .gitignore  Cargo.toml  INTEGRATION.md  Makefile  README.md  deploy.sh  rust-toolchain.toml
s_contract/.cargo/: config.toml
s_contract/src/: contract_wasm.rs  lib.rs
s_contract/tests/: integration_test.rs
s_frontend/: .env.example  .eslintrc.cjs  .gitignore  BUILD_GUIDE.md  FIX_SUMMARY.md  PERMISSIONS_GUIDE.md  QUICK_START.md  README.md  RUN.md  SETUP.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite-plugin-spa-fallback.js  vite.config.ts
s_frontend/public/icons/: README copy.md  README.md  generate-icons.html
s_frontend/src/: manifest.json
s_frontend/src/background/: index.ts  service-worker.ts
s_frontend/src/components/: AppIcons.tsx  AppImageData.ts  CustomDropdown.tsx  FindUsers.tsx  Header.tsx  Layout.tsx  MediaCard.tsx  MediaTracker.tsx  MintNFTModal.tsx  NFTCard.tsx  NFTGallery.tsx  PrivacySettings.tsx  SeriesBookmarksPanel.tsx  SettingsPanel.tsx  Skeleton.tsx  Toast.tsx  TrackedMediaCard.tsx  TrackingPermissionModal.tsx  WalletConnect.tsx  index.ts
s_frontend/src/config/: constants.ts
s_frontend/src/content/: index.ts  media-tracker.ts  ui-components.ts
(+41 files in other folders)
